--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,4 @@
-/* body {
+body {
   background-color: darkblue;
-<<<<<<< HEAD
-  color: rgba(255, 255, 255, 0.945);
-=======
-
-  color: rgba(255, 255, 255, 0.945);
-
   color: white;
-
->>>>>>> dev_html
 }
- */
