--- a/css/styles.css
+++ b/css/styles.css
@@ -2,3 +2,36 @@ body {
   background-color: darkblue;
   color: white;
 }
+
+/* en el body esta un backgropun-color: #0a0a23 */
+
+#text {
+  background-color: #0a0a23;
+  color: #ffffff;
+  padding: 10px;
+  border-radius: 3px;
+}
+
+#game {
+  max-width: 500px;
+  max-height: 400px;
+  background-color: #cdf1e8;
+  color: #292222;
+  margin: 30px auto 0px;
+  padding: 10px;
+}
+
+#controls,
+#stats {
+  border: 1px solid #0a0a23;
+  color: 0a0a23;
+  padding: 5px;
+}
+
+#monsterStats {
+  display: none;
+  border: 1px solid #0a0a23;
+  padding: 5px;
+  color: #ffffff;
+  background: #c70d0d;
+}
