--- a/css/styles.css
+++ b/css/styles.css
@@ -35,3 +35,15 @@ body {
   color: #ffffff;
   background: #c70d0d;
 }
+
+.stat {
+  padding-right: 10px;
+}
+
+button {
+  cursor: pointer;
+  color: #0a0a23;
+  background-color: #feac32;
+  background-image: linear-gradient(#fecc4c, #ffac33);
+  border: 3px solid #feac32;
+}
